# helloTauri

./: README.md  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/db/: 000_init.sql
src-tauri/src/: database.rs  main.rs
