[package]
name = "hellotauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.39.2", features = ["full"] }
futures = "0.3.30"
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
directories = "5.0.1"
dunce = "1.0.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
